--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 <div id="header">
     <div id="headerContent">
         <button id="play-button">Begin Your Experience</button>
-        <b id="label-dev">Developer Version</b>
+        <b id="label-dev">Demo Version</b>
     </div>
 </div>
 
 
-<a-scene class="fullscreen" canvas="" debug="true" stats="true"
-         inspector="url: https://aframe.io/releases/0.3.0/aframe-inspector.min.js"
+<a-scene class="fullscreen" canvas="" debug="true" stats="false"
+         inspector="url: https://aframe.io/releases/0.4.0/aframe-inspector.min.js"
          keyboard-shortcuts="" screenshot="" vr-mode-ui="">
 
 <!--
@@ -81,12 +81,12 @@
     <img id="TossaLandscapeThumb" crossorigin="anonymous" src="../../img/TossaLandscapeThumb.png">
     <img id="TossaGhoticChurchMainThumb" crossorigin="anonymous" src="../../img/TossaGhoticChurchMainThumb.png">
     <img id="SofiaRestaurantThumb" crossorigin="anonymous" src="../../img/SofiaRestaurantThumb.png">
-    <img id="SofiaChillOutThumb" crossorigin="anonymous" src="../../img/SofiaChillOutThumb.png">
+    <img id="SofiaChillOutThumb" crossorigin="anonymous" src="../../img/SofiasChillOutThumb.png">
     <img id="CookingMuseumIndoorThumb" crossorigin="anonymous" src="../../img/CookingMuseumIndoorThumb.png">
     <img id="DianaChimneyRoomThumb" crossorigin="anonymous" src="../../img/DianaChimneyRoomThumb.png">
     <img id="TossaOctopussyChefMarker" crossorigin="anonymous" src="../../img/TossaOctopussyChefMarker.png">
     <img id="GranadosRestaurantSkybox" crossorigin="anonymous" src="../../img/GranadosRestaurantSkyBox_1920_960.png">
-    <img id="DianaChimneyMarker" crossorigin="anonymous" src="../../img/A_Marker_Transp.png">
+    <img id="DianaChimneyMarker" crossorigin="anonymous" src="../../img/DianaFountainButtonImage.png">
 
     <!-- VIDEOS -->
 
@@ -231,72 +231,31 @@
 
 </a-entity>
 
+<!--SCENE ONE-->
 
 <a-entity id="Scene_one_parent" active visible position="0 0 0">
 
     <a-videosphere id="videosphere" rotation="0 -110 0" active visible src="#other360"
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
-    <!-- CAMERA -->
-
-    <!--
-      ******************************************************************************************************************************************************************************************
-              CAMERA
-      /*****************************************************************************************************************************************************************************************
-      -->
-    <a-camera camera active="true" visible="true" position="0 0.5 0" id="player1" collider-check>
-        <a-cursor active visible id="cursor1" color="orange" event-set__1="_event:mouseenter; color: springgreen"
-                  event-set__2="_event: mouseleave; color: orange" raycaster="objects: .link" material="" cursor=""
-                  geometry="" position="" rotation="" scale color="springgreen">
-            <!--
-            <a-animation begin="mouseenter" easing="ease-in" attribute="scale"
-                         fill="backwards" from="1 1 1" to="0.1 0.1 0.1" dur="1500"></a-animation>
-            <a-animation begin="mouseleave" easing="ease-in" attribute="scale"
-                         fill="backwards" from="0.1 0.1 0.1" to=" 1 1 1"></a-animation>
-
-            <a-animation begin="click" easing="ease-in" attribute="scale"
-                         fill="forwards" from="1 1 1" to="0.1 0.1 0.1"></a-animation>
-
-            <a-animation begin="fusing" easing="ease-in" attribute="scale"
-                         fill="forwards" from="1 1 1" to="0.1 0.1 0.1"></a-animation>
-            -->
-        </a-cursor>
+    <a-camera visible="false" active="false" id="player1" position="0 0 0">
+        <a-cursor id="cursor1" visible active color="blue"></a-cursor>
     </a-camera>
-    <!--
-    ******************************************************************************************************************************************************************************************
-            END CAMERA
-    /*****************************************************************************************************************************************************************************************
-    -->
+    </a-camera>
+
 
 </a-entity>
 
+<!--SCENE TWO-->
 
 <a-entity id="Scene_two_parent" active visible position="0 0 0">
 
     <a-videosphere id="videosphereGranados" rotation="0 -110 0" active visible src="#other360"
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
-    <!-- CAMERA -->
-    <!--
-      ******************************************************************************************************************************************************************************************
-              CAMERA
-      /*****************************************************************************************************************************************************************************************
-      -->
     <a-camera visible="false" active="false" id="player2" position="0 0 0">
         <a-cursor id="cursor2" visible active color="blue"></a-cursor>
     </a-camera>
-    <!--
-    ******************************************************************************************************************************************************************************************
-            END CAMERA
-    /*****************************************************************************************************************************************************************************************
-    -->
-    <!--
-******************************************************************************************************************************************************************************************
-        NON PERSISTENT BUTTONS
-/*****************************************************************************************************************************************************************************************
--->
-
-    <!-- If the audio of the buttons is in the button, they must be near the listener to be audible-->
 
     <a-entity id="provisional_buttons_scene_two" position="0.75 2.25 -2.0" rotation="0.0 -15.0 0.0" scale="0.5 0.5 0.5"
               active visible>
@@ -307,44 +266,21 @@
         </a-entity>
     </a-entity>
 
-    <!--
-    ******************************************************************************************************************************************************************************************
-        END NON PERSISTENT BUTTONS
-    /*****************************************************************************************************************************************************************************************
-    -->
-
-
 </a-entity>
+
+
+<!--SCENE THREE-->
 
 <a-entity id="Scene_three_parent" active visible position="0 0 0">
 
     <a-videosphere id="videosphereDianaChimney" rotation="0 -110 0" active visible src="#other360"
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
-    <!--
-      ******************************************************************************************************************************************************************************************
-              CAMERA
-      /*****************************************************************************************************************************************************************************************
-      -->
-
     <a-camera visible="false" active="false" id="player3" position="0 0 0">
         <a-cursor id="cursor3" visible active color="blue"></a-cursor>
     </a-camera>
 
-    -->
-    <!--
-    ******************************************************************************************************************************************************************************************
-            END CAMERA
-    /*****************************************************************************************************************************************************************************************
-    -->
-    <!--
-******************************************************************************************************************************************************************************************
-        NON PERSISTENT BUTTONS
-/*****************************************************************************************************************************************************************************************
--->
-
-    <!-- If the audio of the buttons is in the button, they must be near the listener to be audible-->
-    <a-entity id="provisional_buttons_scene_three" position="3.0 2.25 -2.0" rotation="0.0 -20.0 0.0" scale="0.5 0.5 0.5"
+    <a-entity id="provisional_buttons_scene_three" position="2.0 2.0 -1.0" rotation="-5.0 -50.0 -5.0" scale="0.9 0.9 0.9"
               active visible>
 
         <a-entity template="src: #linkButtonsChangeSceneNoRotation" id="buttonfiveone" data-thumb="#DianaChimneyMarker"
@@ -352,20 +288,16 @@
                   data-src="../../videos/tossamar/DianaSolarium.mp4" data-scene="1">
         </a-entity>
     </a-entity>
-    <!--
-    ******************************************************************************************************************************************************************************************
-        END NON PERSISTENT BUTTONS
-    /*****************************************************************************************************************************************************************************************
-    -->
+
 </a-entity>
 
 
-<a-entity id="Scene_four_parent" active visible position="0 0 0">
-<!--
-    <a-videosphere id="skyboxframe" rotation="0 -110 0" active visible src="#other360"
-                   autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
+<!--SCENE FOUR-->
 
-    -->
+<a-entity id="Scene_four_parent" active visible position="0 0 0">
+
+    <a-skybox id="skyboxframe" rotation="0 -110 0" active visible src="#GranadosRestaurantSkybox"
+            ></a-skybox>
 
     <!-- plane sbs -->
     <a-entity id="planeSBS" active visble position="0 0 0">
@@ -378,7 +310,7 @@
 
     <!-- Camara sbs -->
     <a-camera visible="false" active="false" id="player4" position="0 0 0" stereocam="eye:left;">
-        <a-cursor id="cursor4" visible active color="red"></a-cursor>
+        <a-cursor id="cursor4" visible active color="blue"></a-cursor>
     </a-camera>
 
 
@@ -428,6 +360,11 @@
         scaleComponent("Scene_two_parent", 0.0, 0.0, 0.0);
         scaleComponent("Scene_three_parent", 0.0, 0.0, 0.0);
         scaleComponent("Scene_four_parent", 0.0, 0.0, 0.0);
+    };
+
+    handleOnStateChange = function(){
+        console.log("Handle camera");
+        setActiveCurrentCamera();
     };
 
 </script>
