--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
     <a-camera visible="false" active="false" id="player1" position="0 0 0">
-        <a-cursor id="cursor1" visible active color="blue"></a-cursor>
+        <a-cursor id="cursor1" visible active color="orange"></a-cursor>
     </a-camera>
     </a-camera>
 
@@ -254,7 +254,7 @@
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
     <a-camera visible="false" active="false" id="player2" position="0 0 0">
-        <a-cursor id="cursor2" visible active color="blue"></a-cursor>
+        <a-cursor id="cursor2" visible active color="orange"></a-cursor>
     </a-camera>
 
     <a-entity id="provisional_buttons_scene_two" position="0.75 2.25 -2.0" rotation="0.0 -15.0 0.0" scale="0.5 0.5 0.5"
@@ -277,7 +277,7 @@
                    autoplay="false" data-set-image-fade-setup="true" animation__fade=""></a-videosphere>
 
     <a-camera visible="false" active="false" id="player3" position="0 0 0">
-        <a-cursor id="cursor3" visible active color="blue"></a-cursor>
+        <a-cursor id="cursor3" visible active color="orange"></a-cursor>
     </a-camera>
 
     <a-entity id="provisional_buttons_scene_three" position="2.0 2.0 -1.0" rotation="-5.0 -50.0 -5.0" scale="0.9 0.9 0.9"
@@ -310,7 +310,7 @@
 
     <!-- Camara sbs -->
     <a-camera visible="false" active="false" id="player4" position="0 0 0" stereocam="eye:left;">
-        <a-cursor id="cursor4" visible active color="blue"></a-cursor>
+        <a-cursor id="cursor4" visible active color="orange"></a-cursor>
     </a-camera>
 
 
