--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
     <!-- <script src="../../lib/vixtuvrEngine.js"></script>-->
 
-    <script type="text/javascript" src="../../lib/kframe.min.js"></script>
 
-    <script type="text/javascript" src="../../require.js"></script>
+    <script src="../../lib/kframe.min.js"></script>
+    <script src="../../lib/require.js"></script>
 
-    <script type="text/javascript" src="../../lib/miniCore.min.js"></script>
+    <script src="../../lib/miniCore.min.js"></script>
 
-    <script type="text/javascript" src="../../components/set-video2.min.js"></script>
+    <script src="../../components/set-video2.min.js"></script>
 
-    <script type="text/javascript" src="../../components/change-scene2.min.js"></script>
+    <script src="../../components/change-scene2.min.js"></script>
 
-    <script type="text/javascript" src="../../components/aframe-stereo-component.min.js"></script>
+    <script src="../../components/aframe-stereo-component.min.js"></script>
 
     <!-- CSS -->
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Raleway:400,300,100,600">
@@ -64,7 +64,7 @@
 
 
 <a-scene class="fullscreen" canvas="" debug="true" stats="false"
-         inspector="url: https://aframe.io/releases/0.4.0/aframe-inspector.min.js"
+         inspector="url: https://aframe.io/releases/0.3.0/aframe-inspector.min.js"
          keyboard-shortcuts="" screenshot="" vr-mode-ui="">
 
 <!--
@@ -76,20 +76,20 @@
 
     <audio id="click-sound" src="../../audio/MenuSelect.ogg"></audio>
 
-
+    <img id="test_img" crossorigin="anonymous" src="../../img/test.png">
 
     <!-- MARKERS -->
 
-    <img id="TossaLandscapeThumb" crossorigin="anonymous" src="../../img/TossaVistasMurallaThumb.png">
+    <img id="TossaLandscapeThumb" crossorigin="anonymous" src="../../img/TossaCasaGranadosThumb.png">
     <img id="TossaGhoticChurchMainThumb" crossorigin="anonymous" src="../../img/TossaIglesiaVilaVellaThumb.png">
     <img id="SofiaRestaurantThumb" crossorigin="anonymous" src="../../img/TossaCanSophiaThumb.png">
     <img id="SofiaChillOutThumb" crossorigin="anonymous" src="../../img/TossaCasaGranadosThumb.png">
     <img id="DianaChimneyRoomThumb" crossorigin="anonymous" src="../../img/TossaHotelDianaThumb.png">
     <img id="TossaOctopussyChefMarker" crossorigin="anonymous" src="../../img/PulpoBrasaChefMarker.png">
-    <img id="GranadosRestaurantSkybox" crossorigin="anonymous" src="../../img/GranadosRestaurantSkyBox_1920_960.png">
     <img id="DianaChimneyMarker" crossorigin="anonymous" src="../../img/TossaSalaModernistaThumb.png">
-
-
+    <img id="GranadosRestaurantSkybox" crossorigin="anonymous" src="../../img/GranadosRestaurantSkyBox_1920_960.png">
+    <!-- BACK MARKER -->
+    <img id="rmarker" crossorigin="anonymous" src="../../img/R_Marker_Transp.png">
     <!-- VIDEOS -->
 
     <video id="other360" loop="true" src="../../videos/tossamar/FortressTossaOne.mp4" webkit-playsinline
@@ -129,7 +129,7 @@
                             event-set__2="_event: mouseup; scale: 0.41 0.41 0.41"
                             event-set__3="_event: mouseenter; scale: 0.41 0.41 0.41"
                             event-set__4="_event: mouseleave; scale: 0.4 0.4 0.4"
-
+                            change-scene="on : click; scene: 1"
                             set-video="on: click; target: #videosphere; src: {{ src }}"
 
                             sound="on: click; src: #click-sound"
@@ -144,7 +144,7 @@
     <script id="linkButtonsChangeScene" type="text/nunjucks">
                      <a-entity class="link" rotation="{{rotation}}">
                         <a-curvedimage id="{{first}}"  material="shader: flat; src: {{ thumb }}"
-                            radius="5.7" theta-length="10" height=".85" rotation="{{rotchild}}" position="{{position}}"
+                            radius="5.7" theta-length="20" height="1.5" rotation="{{rotchild}}" position="{{position}}"
                             scale=".4 .4 .4"  opacity=".8"
                             event-set__1="_event: mousedown; scale: 0.4 0.4 0.4"
                             event-set__2="_event: mouseup; scale: 0.41 0.41 0.41"
@@ -156,7 +156,7 @@
                             set-video="on: click; target: {{target}}; src: {{ src }}"
                             sound="on: click; src: #click-sound"
                             >
-                            <a-animation attribute="rotation" from="0 0 0" to="0 -360 0" begin="0" dur="100000" repeat="infinite" easing="linear"></a-animation>
+                            <a-animation attribute="rotation" from="15 0 0" to="15 -360 0" begin="0" dur="100000" repeat="infinite" easing="linear"></a-animation>
                      </a-curvedimage>
                     </a-entity>
 
@@ -188,6 +188,26 @@
 
     </script>
 
+    <script id="linkButtonsChangeSceneFull" type="text/nunjucks">
+                     <a-entity class="link" rotation="{{rotation}}">
+                        <a-curvedimage id="{{first}}"  material="shader: flat; src: {{ thumb }}"
+                            radius="5.7" theta-length="10" height=".85" rotation="{{rotchild}}" position="{{position}}"
+                            scale=".4 .4 .4"  opacity=".8"
+                            event-set__1="_event: mousedown; scale: 0.4 0.4 0.4"
+                            event-set__2="_event: mouseup; scale: 0.41 0.41 0.41"
+                            event-set__3="_event: mouseenter; scale: 0.41 0.41 0.41"
+                            event-set__4="_event: mouseleave; scale: 0.4 0.4 0.4"
+                            change-scene="on : click; scene: {{scene}}"
+
+
+                            set-video="on: click; target: {{target}}; src: {{ src }}"
+                            sound="on: click; src: #click-sound"
+                            >
+                     </a-curvedimage>
+                    </a-entity>
+
+        </script>
+
 
 </a-assets>
 <!--
@@ -204,34 +224,37 @@
 
 <!-- If the audio of the buttons is emitted from the button, they must be near the listener to be audible-->
 
-<a-entity id="persistentbuttons" position="0 0.75 0"> <!-- layout="layout: line; margin: 1.5" -->
+<a-entity id="persistentbuttons" position="0 0 0"> <!-- layout="layout: line; margin: 1.5" -->
     <!-- 5 angles 0, -72, -144, -216, -288 -->
-    <a-entity template="src: #linkTemplate" id="btn1" data-src="../../videos/tossamar/TossaMarLandscape.mp4"
-              data-thumb="#TossaLandscapeThumb"
-              data-first="maphallbutton1" data-rotation="0 0 0" scale="20.0 20.0 20.0">
+    <a-entity template="src: #linkButtonsChangeScene" id="btn1" data-src="../../videos/tossamar/TossaMarLandscape.mp4"
+              data-thumb="#TossaLandscapeThumb" data-target="#videosphere" data-scene="1"
+              data-first="maphallbutton1" data-rotation="0 0 0" data-rotchild="-15 0 0">
     </a-entity>
 
-    <a-entity template="src: #linkTemplate" id="btn2" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4"
-              data-thumb="#TossaGhoticChurchMainThumb"
-              data-first="maphallbutton2" data-rotation="0 -72 0" scale="20.0 20.0 20.0">
+    <a-entity template="src: #linkButtonsChangeScene" id="btn2" data-src="../../videos/tossamar/TossaMarGhoticChurchMain.mp4"
+              data-thumb="#TossaGhoticChurchMainThumb" data-target="#videosphere" data-scene="1"
+              data-first="maphallbutton2" data-rotation="0 72 0" data-rotchild="-15 0 0">
     </a-entity>
 
     <a-entity template="src: #linkButtonsChangeScene" id="btn3" data-target="#videosphereGranados"
               data-src="../../videos/tossamar/Granados360.mp4" data-thumb="#SofiaRestaurantThumb"
-              data-first="maphallbutton3" data-rotation="0 -144 0" data-scene="2" scale="20.0 20.0 20.0">
+              data-first="maphallbutton3" data-rotation="0 144 0" data-rotchild="-15 0 0" data-scene="2">
     </a-entity>
 
-    <a-entity template="src: #linkTemplate" id="btn4" data-src="../../videos/tossamar/GranadosTerraceOne.mp4"
-              data-thumb="#SofiaChillOutThumb"
-              data-first="maphallbutton4" data-rotation="0 -216 0" scale="20.0 20.0 20.0">
+    <a-entity template="src: #linkButtonsChangeScene" id="btn4" data-src="../../videos/tossamar/GranadosTerraceOne.mp4"
+              data-thumb="#SofiaChillOutThumb" data-target="#videosphere" data-scene="1"
+              data-first="maphallbutton4" data-rotation="0 216 0" data-rotchild="-15 0 0">
     </a-entity>
 
     <a-entity template="src: #linkButtonsChangeScene" id="btn5" data-target="#videosphereDianaChimney"
               data-src="../../videos/tossamar/DianaChimney.mp4" data-thumb="#DianaChimneyRoomThumb"
-              data-first="maphallbutton5" data-rotation="0 -288 0" data-scene="3" scale = "20.0 20.0 20.0">
+              data-first="maphallbutton5" data-rotation="0 288 0" data-rotchild="-15 0 0" data-scene="3">
     </a-entity>
 
 </a-entity>
+
+<a-sky id="sky" opacity= "0" color="black" radius = "1" position="0 2 0"
+        ></a-sky>
 
 <!--SCENE ONE-->
 
@@ -259,7 +282,7 @@
         <a-cursor id="cursor2" visible active color="orange"></a-cursor>
     </a-camera>
 
-    <a-entity id="provisional_buttons_scene_two" position="0.75 2.25 -2.0" rotation="0.0 -15.0 0.0" scale="0.5 0.5 0.5"
+    <a-entity id="provisional_buttons_scene_two" position="0.75 1.75 -2.0" rotation="0.0 -15.0 0.0" scale="0.5 0.5 0.5"
               active visible>
 
         <a-entity template="src: #linkButtonsChangeSceneNoRotation" id="buttonthreeone"
@@ -298,8 +321,8 @@
 
 <a-entity id="Scene_four_parent" active visible position="0 0 0">
 
-    <a-skybox id="skyboxframe" rotation="0 -110 0" active visible src="#GranadosRestaurantSkybox"
-            ></a-skybox>
+    <a-sky id="skyboxframe" rotation="0 -90 0" active visible src="#GranadosRestaurantSkybox"
+            ></a-sky>
 
     <!-- plane sbs -->
     <a-entity id="planeSBS" active visble position="0 0 0">
@@ -314,6 +337,11 @@
     <a-camera visible="false" active="false" id="player4" position="0 0 0" stereocam="eye:left;">
         <a-cursor id="cursor4" visible active color="orange"></a-cursor>
     </a-camera>
+
+
+    <a-entity template="src: #linkButtonsChangeSceneFull" id="buttonback1" data-thumb="#rmarker" data-target="#videosphereGranados"
+              data-src="../../videos/tossamar/Granados360.mp4"
+              data-first="imgButtonback" data-rotation="0 180 0" data-position="-0.18 0.25 0" data-scene="2"></a-entity>
 
 
 </a-entity>
@@ -332,6 +360,7 @@
 
     var scene = document.querySelector("a-scene");
     var videos = document.getElementsByTagName("video");
+    var sky = document.querySelector("a-sky");
 
     console.log("is mobile: " + checkUserAgent() + " " + TYPE_AGENT);
 
@@ -343,16 +372,23 @@
     } else {
         console.log("not loaded");
         document.querySelector("#play-button").style.display = "none";
+        sky.setAttribute("opacity", 1);
         scene.addEventListener('loaded', initCore);
-
         //setVisibleComponent("tempvideosphere");
     }
 
     initScene = function () {
 
-
         //custom init
-        changeTo(GameState.ONE);
+        //Register GameStates
+        registerState(GameState.ONE);
+        registerState(GameState.TWO);
+        registerState(GameState.THREE);
+        registerState(GameState.FOUR);
+
+
+
+
         setVisibleComponent("Scene_one_parent", true);
         setVisibleComponent("Scene_two_parent", false);
         setVisibleComponent("Scene_three_parent", false);
@@ -362,12 +398,37 @@
         scaleComponent("Scene_two_parent", 0.0, 0.0, 0.0);
         scaleComponent("Scene_three_parent", 0.0, 0.0, 0.0);
         scaleComponent("Scene_four_parent", 0.0, 0.0, 0.0);
+
+        setTimeout(function(){
+
+            sky.setAttribute("opacity", 0);
+            sky.setAttribute("visible", false);
+        }, 1000);
+
+        /*
+         //OOOH fuck explorers
+         console.log("previous changeTo");
+         changeTo(GameState.ONE);
+         console.log("later changeTo");
+         */
+
     };
 
     handleOnStateChange = function(){
         console.log("Handle camera");
         setActiveCurrentCamera();
+
+        if(currentState == GameState.FOUR)
+        {
+            scaleComponent("persistentbuttons", 0.0, 0.0, 0.0);
+            setVisibleComponent("persistentbuttons", false);
+        }else
+        {
+            setVisibleComponent("persistentbuttons", true);
+            scaleComponent("persistentbuttons", 1.0, 1.0, 1.0);
+        }
     };
+
 
 </script>
 
