--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <a-cursor id="cursor3" visible active color="orange"></a-cursor>
     </a-camera>
 
-    <a-entity id="provisional_buttons_scene_three" position="2.0 2.0 -1.0" rotation="-5.0 -50.0 -5.0" scale="0.9 0.9 0.9"
+    <a-entity id="provisional_buttons_scene_three" position="-1.54 1.6 1.14" rotation="-5.5 -215.0 1.5" scale="0.9 0.9 0.9"
               active visible>
 
         <a-entity template="src: #linkButtonsChangeSceneNoRotation" id="buttonfiveone" data-thumb="#DianaChimneyMarker"
@@ -386,7 +386,9 @@
         registerState(GameState.THREE);
         registerState(GameState.FOUR);
 
+        myFunction = onStateChange();
 
+        console.log(myFunction);
 
 
         setVisibleComponent("Scene_one_parent", true);
@@ -405,12 +407,7 @@
             sky.setAttribute("visible", false);
         }, 1000);
 
-        /*
-         //OOOH fuck explorers
-         console.log("previous changeTo");
-         changeTo(GameState.ONE);
-         console.log("later changeTo");
-         */
+
 
     };
 
